FIX génration yo message

--- a/src/main/webapp/app/entities/tweet/tweet-detail.html
+++ b/src/main/webapp/app/entities/tweet/tweet-detail.html
@@ -15,7 +15,7 @@
         <hr>
         <dt><span>user</span></dt>
         <dd>
-            {{vm.tweet.user.userId}}
+            {{vm.tweet.user.login}}
         </dd>
         <hr>
     </dl>
