--- a/src/main/webapp/app/entities/tweet/tweets.html
+++ b/src/main/webapp/app/entities/tweet/tweets.html
@@ -31,7 +31,7 @@
                     <td>{{tweet.messsage}}</td>
                     <td>{{tweet.date | date:'medium'}}</td>
                     <td>
-                        {{tweet.user.userId}}
+                        {{tweet.user.login}}
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
