Modification IHM US 6

--- a/src/main/webapp/app/entities/tweet/tweets.html
+++ b/src/main/webapp/app/entities/tweet/tweets.html
@@ -7,7 +7,7 @@
                 <button class="btn btn-primary" ui-sref="tweet.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Tweet
+                        Tweeter !
                     </span>
                 </button>
             </div>
