--- a/src/main/webapp/app/entities/tweet/tweet-dialog.html
+++ b/src/main/webapp/app/entities/tweet/tweet-dialog.html
@@ -8,7 +8,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <div class="form-group">
+        <div class="form-group"  ng-show="false">
             <label for="id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.tweet.id" readonly />
@@ -28,23 +28,6 @@
                     This field cannot be longer than 140 characters.
                 </p>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_date">Date</label>
-                <div class="input-group">
-                    <input id="field_date" type="text" class="form-control" name="date" datetime-picker="{{dateformat}}" ng-model="vm.tweet.date" is-open="vm.datePickerOpenStatus.date"
-                      />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" ng-click="vm.openCalendar('date')"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-                </div>
-        </div>
-
-        <div class="form-group">
-            <label for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="vm.tweet.user" ng-options="user as user.login for user in vm.users track by user.id">
-                <option value=""></option>
-            </select>
         </div>
     </div>
     <div class="modal-footer">
